# forgeapi

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  todo.md
.github/workflows/: ci.yml  publish.yml
audit/: 00_index.md  01_auth.md  02_permissions_done.md  03_events_done.md  04_middleware.md  05_core.md  06_telescope_cli.md  07_tests_done.md
docs/: audit.md  git-cheatsheet.md  reference.md
forgeapi/: __init__.py  bootstrap.py  config.py  exceptions.py  kit.py
forgeapi/auth/: __init__.py  backend.py  contracts.py  dependencies.py  facade.py  guard.py  models.py  provider.py
forgeapi/broadcasting/: __init__.py  manager.py  provider.py
forgeapi/cache/: __init__.py  cache.py  provider.py
forgeapi/cli/: base.py  main.py
forgeapi/config/: __init__.py  env.py  loader.py  models.py
forgeapi/controllers/: __init__.py  base.py  discovery.py  provider.py
forgeapi/database/: __init__.py  model.py  observer.py  queryset.py  scope.py  seeder.py
forgeapi/events/: __init__.py  bus.py  decorators.py  event.py  provider.py  redis_bus.py
forgeapi/foundation/: __init__.py  provider.py
forgeapi/logging/: __init__.py  logger.py
forgeapi/mcp/: docs.py  examples.py  generators.py  scanner.py  server.py
forgeapi/middleware/: __init__.py  base_middleware.py  cors.py  guard.py  logging.py  provider.py  rate_limit.py  request_id.py  security_headers.py
forgeapi/pagination/: __init__.py  cursor.py  paginator.py  provider.py  response.py
forgeapi/permissions/: __init__.py  dependencies.py  discovery.py  mixins.py  models.py  provider.py  registry.py
forgeapi/policies/: __init__.py  base.py  gate.py  provider.py
forgeapi/queue/: __init__.py  job.py  models.py  queue.py
forgeapi/scheduling/: __init__.py  models.py  scheduler.py
forgeapi/schemas/: __init__.py  base.py
forgeapi/settings/: base.py
forgeapi/storage/: __init__.py  image.py  provider.py  storage.py
forgeapi/support/: __init__.py  number.py  (+2 more)
tests/: conftest.py  test_auth.py  test_config.py  test_controllers.py  test_events.py  test_exceptions.py  test_middleware.py  test_pagination.py  test_permission.py  test_schemas.py  test_settings.py
(+50 files in other folders)
