[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-kits"
version = "1.2.1"
description = "FastAPI toolkit — auth, pagination, CLI generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "typer>=0.26",
    "jinja2>=3.1.6",
    "rich>=15.0",
]

[project.optional-dependencies]
auth          = ["pyjwt>=2.13"]
asyncpg       = ["tortoise-orm>=1.1.7", "asyncpg>=0.30"]
aiosqlite     = ["tortoise-orm>=1.1.7", "aiosqlite>=0.21"]
aiomysql      = ["tortoise-orm>=1.1.7", "aiomysql>=0.2"]
db            = ["tortoise-orm>=1.1.7"]
full-asyncpg  = ["forge-kits[auth,asyncpg]"]
full-aiosqlite = ["forge-kits[auth,aiosqlite]"]
full-aiomysql = ["forge-kits[auth,aiomysql]"]
full          = ["forge-kits[auth,asyncpg,aiosqlite,aiomysql]"]
mcp           = ["mcp>=1.0"]

[project.scripts]
forgeapi     = "forgeapi.cli.main:app"
forgeapi-mcp = "forgeapi.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["forgeapi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
